# tracer

./: .gitignore  LICENSE  README.md  analyzer.py  pyproject.toml  tracer  tracer-lab
examples/: README.md  codex-smoke-session.jsonl
src/tracer/: __init__.py  core.py
src/tracer/lab/: __init__.py  analysis.py  cli.py  cli_support.py  db.py  mcp_server.py  paths.py  traces.py  web.py
src/tracer/lab/static/: app.css  app.js
tests/: test_analyzer.py  test_core.py  test_lab.py
