[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-tracer"
version = "0.1.1"
description = "Analyze Claude Code session traces and expose them through a CLI and MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Tracer contributors" }
]
keywords = ["claude-code", "mcp", "trace", "token-analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Software Development",
]

[project.scripts]
tracer = "analyzer:main_entry"

[project.urls]
Homepage = "https://github.com/alextacho/tracer"
Repository = "https://github.com/alextacho/tracer"
Issues = "https://github.com/alextacho/tracer/issues"

[tool.setuptools]
py-modules = ["analyzer"]
