[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracer"
version = "0.1.5"
description = "Create, review, and compare coding-agent trace artifacts through a CLI, local Lab, and MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Tracer contributors" }
]
keywords = ["claude-code", "codex", "mcp", "trace", "agent-review", "token-analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Software Development",
]

[project.scripts]
tracer = "tracer.core:main_entry"
tracer-lab = "tracer.lab.cli:main"

[project.urls]
Homepage = "https://github.com/alextacho/tracer"
Repository = "https://github.com/alextacho/tracer"
Issues = "https://github.com/alextacho/tracer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tracer*"]

[tool.setuptools.package-data]
"tracer.lab" = ["static/*.css", "static/*.js"]
